[tool.poetry]
name = "hdtop"
version = "0.1.0"
description = "Top-liked monitoring console for hadoop"
authors = ["tzing <tzingshih@gmail.com>"]
license = "Apache-2.0"
readme = "Readme.md"
homepage = "https://github.com/tzing/hdtop"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.6"
httpx = "^0.16.1"
urwid = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.scripts]
hdtop = 'hdtop.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
